@@ -1,3 +1,7 @@
+Fri May 29 17:39:14 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* tool/make_hgraph.rb: added.
+
 Fri May 29 14:39:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (iseq_compile_each): out of range NTH_REF is always
